# accelerate_fem

./: .gitignore  Makefile  settings.ini
accelerate_simulations/: _nbdev.py
accelerate_simulations/geometry/: __init__.py  abstract_geometry.py  meshed_geometry.py  rasterized_geometry.py
accelerate_simulations/preprocess/: input_fields.py  interpolate_target.py
accelerate_simulations/train/: model.py
app/api/: main.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.js
docs/_data/: topnav.yml
examples/box_w_aggr/: README.md  config.py  generate_data.py  predict.py  preprocess.py  train.ipynb  train.py  util.py
fem/: CMakeLists.txt  README.md  main.cpp  material_model.cpp  material_model.h  model.cpp  model.h  point_history.cpp  point_history.h
ml/: Market exploration.xmind  README.md  requirements.txt  settings.ini
ml/accelerate_simulations/: _nbdev.py  predict.py
ml/accelerate_simulations/geometry/: __init__.py  abstract_geometry.py  meshed_geometry.py  rasterized_geometry.py
ml/accelerate_simulations/preprocess/: __init__.py  (+2 more)
ml/docs/: _config.yml
ml/notebooks/: 00_abstract_geometry.ipynb  01_meshed_geometry.ipynb  01_rasterized_geometry.ipynb  02_input_fields.ipynb  02_interpolate_target.ipynb  03_predict.ipynb  03_train.ipynb
models/: model.data-00000-of-00002  model.index
notebooks/: 00_abstract_geometry.ipynb  01_meshed_geometry.ipynb  01_rasterized_geometry.ipynb  02_input_fields.ipynb  02_interpolate_target.ipynb  02_preprocess.ipynb  03_train.ipynb
scripts/: generate_data.py  predict.py  preprocess.py
(+3 files in other folders)
